# NHLibraryService

./: README.md  pyproject.toml
backend/: create_tables.py  database.py  main.py  models.py  schemas.py
frontend/: package-lock.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/books/: page.tsx
frontend/src/app/lending/: page.tsx
frontend/src/app/members/: page.tsx
frontend/src/components/: Navbar.tsx
frontend/src/lib/: api.ts
